--- a/Curso JavaScript/Seção 9/Export-import/package.json
+++ b/Curso JavaScript/Seção 9/Export-import/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "gera": "webpack -w"
+    "dev": "webpack -w"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +19,6 @@
   },
   "dependencies": {
     "core-js": "^3.26.1",
-    "css-loader": "^3.2.0",
-    "regenerator-runtime": "^0.13.10",
-    "style-loader": "^1.0.0"
-    
+    "regenerator-runtime": "^0.13.10"
   }
 }
